[tool.poetry]
name = "esp-checker"
version = "0.1.0"
description = "Test"
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.8.12"
requests = "^2.28.1"
pandas = "^1.5.1"
grequests = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
